--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -204,7 +204,7 @@
       </view>
     </view>
     <block wx:for="{{project_info}}" wx:key="{{item.pro_intro}}">
-      <view class="user_project_frame" catchtap="financingDetail" data-id="{{item.pro_id}}">
+      <view class="user_project_frame" hover-class='t-hoverColor' catchtap="financingDetail" data-id="{{item.pro_id}}">
         <view class="flex">
           <view class="pro_intro">{{item.pro_intro||item.case_name}}</view>
           <view class='is_exclusive' wx:if='{{item.is_exclusive===1}}'>独家</view>
@@ -517,7 +517,7 @@
                 <view class="refuseBtn rejectm">拒绝</view>
               </view>
               <view class="t-line"></view>
-              <view class="flex agreeBox" catchtap="btn" data-record="{{item.record_id}}" data-status="{{1}}" hover-class='t-hoverColor'hover-stop-propagation="true">
+              <view class="flex agreeBox" catchtap="btn" data-record="{{item.record_id}}" data-status="{{1}}" hover-class='t-hoverColor' hover-stop-propagation="true">
                 <image src="/img/icon-tongyi@2x.png" class="iconStyle"></image>
                 <view class="agreeBtn agreem">同意查看</view>
               </view>
@@ -556,9 +556,9 @@
         </view>
       </view>
       <!--名片内容  -->
-      <view class="outsideBox" data-project="{{item.user.user_id}}" catchtap="personDetail" >
+      <view class="outsideBox" data-project="{{item.user.user_id}}" catchtap="personDetail">
         <view class="redPoint" wx:if="{{item.message_status == 0}}"></view>
-        <view >
+        <view>
           <view wx:if="{{type == 0}}">
             <image src="/img/img-quanwang@2x.png" class="connection" wx:if="{{item.user.follow_status != 1}}"></image>
             <image src="/img/img-wode@2x.png" class="connection" wx:if="{{item.user.follow_status == 1}}"></image>
@@ -900,7 +900,7 @@
       <image class='t-itemPic' src='/img/icon-tuisongxiangmu@2x.png'></image>
       <span>已推送</span>
     </view> -->
-    <view class='t-cardBottomItem flex' wx:if='{{item.follow_status==0}}' data-id='{{item.user_id}}' catchtap='contactsAdd'>
+    <view class='t-cardBottomItem flex' wx:if='{{item.follow_status==0}}' hover-class='t-hoverColor' hover-stop-propagation='true' data-id='{{item.user_id}}' catchtap='contactsAdd'>
       <image class='t-itemPic' src='/img/icon-jiarenmai@2x.png'></image>
       <view>加人脉</view>
     </view>
@@ -1001,56 +1001,56 @@
 
 <!--投资机构  -->
 <template name="investment">
-<view id="investment">
-  <block wx:for="{{investment_list}}" wx:key="{{index}}">
-    <view class="investGroupBlock flex" hover-class='t-hoverColor' bindtap="institutionalDetails" data-id="{{item.investment_id}}" hidden="{{currentTab == 0 && index >= 6}}" style="{{index == 5 && currentTab == 0 ? 'border:none':''}}">
-      <view class="investGroupBlock1 flex">
-        <view class="investGroupLeft">
-          <image src="{{item.investment_logo}}" class="investGroupLeft" wx:if="{{item.investment_logo}}" mode="aspectFit"></image>
-          <image src="/img/warband-logo.png" class="investGroupLeft" wx:if="{{!item.investment_logo}}"></image>
-        </view>
-        <view class="investGroupRight">
-          <view class="flex investTitleBlock">
-            <view class="investTitle">{{item.investment_name}}</view>
-            <view class="investNum">
-              <label>{{item.investment_event_count}}</label>个投资案例</view>
+  <view id="investment">
+    <block wx:for="{{investment_list}}" wx:key="{{index}}">
+      <view class="investGroupBlock flex" hover-class='t-hoverColor' bindtap="institutionalDetails" data-id="{{item.investment_id}}" hidden="{{currentTab == 0 && index >= 6}}" style="{{index == 5 && currentTab == 0 ? 'border:none':''}}">
+        <view class="investGroupBlock1 flex">
+          <view class="investGroupLeft">
+            <image src="{{item.investment_logo}}" class="investGroupLeft" wx:if="{{item.investment_logo}}" mode="aspectFit"></image>
+            <image src="/img/warband-logo.png" class="investGroupLeft" wx:if="{{!item.investment_logo}}"></image>
           </view>
-          <view class="investIntro" wx:if="{{item.investment_introduce}}">{{item.investment_introduce}}</view>
-          <view class="investIntro" wx:if="{{!item.investment_introduce}}"></view>
-          <view class="flex" wx:if="{{item.industry_list.length != 0}}">
-            <label class="mainCase">主投</label>
-            <view class="mainCaseContent">
-              <block wx:for="{{item.industry_list}}" wx:key="{{index}}" wx:for-item="industryList">
-                <label wx:if="{{index <  item.industry_list.length-1}}">{{industryList.industry_name}}、</label>
-                <label wx:if="{{index == item.industry_list.length-1}}">{{industryList.industry_name}}</label>
-              </block>
+          <view class="investGroupRight">
+            <view class="flex investTitleBlock">
+              <view class="investTitle">{{item.investment_name}}</view>
+              <view class="investNum">
+                <label>{{item.investment_event_count}}</label>个投资案例</view>
             </view>
-          </view>
-          <view class="flex" wx:if="{{item.style_list.length != 0}}">
-            <label class="tapCase">标签</label>
-            <view class="mainCaseContent">
-              <block wx:for="{{item.style_list}}" wx:key="{{index}}" wx:for-item="styleList">
-                <label>{{styleList.style_name}}、</label>
-                <!-- <label wx:if="{{index <  item.style_list.length-1}}">{{styleList.style_name}}、</label> -->
-                <!-- <label wx:if="{{index == item.style_list.length-1}}">{{styleList.style_name}}</label> -->
-              </block>
-              <block wx:for="{{item.type_list}}" wx:key="{{index}}" wx:for-item="typeList">
-                <label wx:if="{{index <  item.type_list.length-1}}">{{typeList.type_name}}、</label>
-                <label wx:if="{{index == item.type_list.length-1}}">{{typeList.type_name}}</label>
-              </block>
+            <view class="investIntro" wx:if="{{item.investment_introduce}}">{{item.investment_introduce}}</view>
+            <view class="investIntro" wx:if="{{!item.investment_introduce}}"></view>
+            <view class="flex" wx:if="{{item.industry_list.length != 0}}">
+              <label class="mainCase">主投</label>
+              <view class="mainCaseContent">
+                <block wx:for="{{item.industry_list}}" wx:key="{{index}}" wx:for-item="industryList">
+                  <label wx:if="{{index <  item.industry_list.length-1}}">{{industryList.industry_name}}、</label>
+                  <label wx:if="{{index == item.industry_list.length-1}}">{{industryList.industry_name}}</label>
+                </block>
+              </view>
             </view>
-          </view>
-          <view class="projectListBlock"   wx:if="{{item.investment_events.length != 0}}">
-            <block wx:for="{{item.investment_events}}" wx:key="{{index}}" wx:for-item="investment_eventsList">
-              <label wx:if="{{index < item.investment_events.length-1}}">{{investment_eventsList.event_time}}【{{investment_eventsList.project_name}}】、</label>
-              <label wx:if="{{index == item.investment_events.length-1}}">{{investment_eventsList.event_time}}【{{investment_eventsList.project_name}}】</label>
-            </block>
+            <view class="flex" wx:if="{{item.style_list.length != 0}}">
+              <label class="tapCase">标签</label>
+              <view class="mainCaseContent">
+                <block wx:for="{{item.style_list}}" wx:key="{{index}}" wx:for-item="styleList">
+                  <label>{{styleList.style_name}}、</label>
+                  <!-- <label wx:if="{{index <  item.style_list.length-1}}">{{styleList.style_name}}、</label> -->
+                  <!-- <label wx:if="{{index == item.style_list.length-1}}">{{styleList.style_name}}</label> -->
+                </block>
+                <block wx:for="{{item.type_list}}" wx:key="{{index}}" wx:for-item="typeList">
+                  <label wx:if="{{index <  item.type_list.length-1}}">{{typeList.type_name}}、</label>
+                  <label wx:if="{{index == item.type_list.length-1}}">{{typeList.type_name}}</label>
+                </block>
+              </view>
+            </view>
+            <view class="projectListBlock" wx:if="{{item.investment_events.length != 0}}">
+              <block wx:for="{{item.investment_events}}" wx:key="{{index}}" wx:for-item="investment_eventsList">
+                <label wx:if="{{index < item.investment_events.length-1}}">{{investment_eventsList.event_time}}【{{investment_eventsList.project_name}}】、</label>
+                <label wx:if="{{index == item.investment_events.length-1}}">{{investment_eventsList.event_time}}【{{investment_eventsList.project_name}}】</label>
+              </block>
 
+            </view>
           </view>
         </view>
       </view>
-    </view>
-  </block>
+    </block>
   </view>
 </template>
 
@@ -1074,30 +1074,30 @@
 
 <!--机构成员  -->
 <template name="memberList">
-<view id="memberList">
-  <block wx:for="{{memberList.list}}" wx:key="{{index}}">
-    <view class="memberInfo flex" hover-class='t-hoverColor' data-memberid="{{item.investment_id}}" hidden="{{currentTab == 0 && index >= 6}}" bindtap="findMember" style="{{index == 5 && currentTab == 0 ? 'border:none':''}}">
-    <view class="memberInfo1 flex">
-      <view class="memberInfoLeft">
-        <image src="{{item.member_avatar_url}}" wx:if="{{item.member_avatar_url}}" class="memberInfoLeft"></image>
-        <view class="memberInfoLeft" wx:if="{{item.member_avatar_text}}">{{item.member_avatar_text}}</view>
-      </view>
-      <view class="memberInfoRight">
-        <view class="flex memberInfoTop">
-          <view class="memberName">{{item.member_name}}</view>
-          <view class="memberTitle" wx:if="{{item.is_former == 0}}">在职</view>
-          <view class="memberTitleLeave" wx:if="{{item.is_former == 1}}">离职</view>
+  <view id="memberList">
+    <block wx:for="{{memberList.list}}" wx:key="{{index}}">
+      <view class="memberInfo flex" hover-class='t-hoverColor' data-memberid="{{item.investment_id}}" hidden="{{currentTab == 0 && index >= 6}}" bindtap="findMember" style="{{index == 5 && currentTab == 0 ? 'border:none':''}}">
+        <view class="memberInfo1 flex">
+          <view class="memberInfoLeft">
+            <image src="{{item.member_avatar_url}}" wx:if="{{item.member_avatar_url}}" class="memberInfoLeft"></image>
+            <view class="memberInfoLeft" wx:if="{{item.member_avatar_text}}">{{item.member_avatar_text}}</view>
+          </view>
+          <view class="memberInfoRight">
+            <view class="flex memberInfoTop">
+              <view class="memberName">{{item.member_name}}</view>
+              <view class="memberTitle" wx:if="{{item.is_former == 0}}">在职</view>
+              <view class="memberTitleLeave" wx:if="{{item.is_former == 1}}">离职</view>
+            </view>
+            <view class="flex memberCompany" wx:if="{{item.investment_name || item.member_position}}">
+              <label>{{item.investment_name}}</label>
+              <label wx:if="{{item.investment_name&&item.member_position}}">·</label>
+              <label>{{item.member_position}}</label>
+            </view>
+            <view class="memberDes" wx:if="{{item.member_introduce}}">{{item.member_introduce}}</view>
+          </view>
         </view>
-        <view class="flex memberCompany" wx:if="{{item.investment_name || item.member_position}}">
-          <label>{{item.investment_name}}</label>
-          <label wx:if="{{item.investment_name&&item.member_position}}">·</label>
-          <label>{{item.member_position}}</label>
-        </view>
-        <view class="memberDes" wx:if="{{item.member_introduce}}">{{item.member_introduce}}</view>
       </view>
-    </view>
-    </view>
-  </block>
+    </block>
   </view>
 </template>
 
