--- a/Weitianshi/app.wxss
+++ b/Weitianshi/app.wxss
@@ -22,7 +22,7 @@ scroll-view {
 }
 
 page {
-  background-color: #f8f8f8;
+  background-color: #f2f3f4;
   /*font-size: 16px;*/
   font-family: -apple-system-font, Helvetica Neue, Helvetica, sans-serif;
 }
@@ -1197,6 +1197,9 @@ textarea {
 .t-white{
   background: #fff!important;
 }
-.t-color{
-  color: #008DE5!important;
+.t-color1{
+   color: #008DE5!important; 
+}
+.t-more{
+  background: #e0e0e0!important;
 }
