--- a/Weitianshi/utils/wxml/threeTab.wxml
+++ b/Weitianshi/utils/wxml/threeTab.wxml
@@ -693,7 +693,8 @@
         <view class="noMessage" wx:if="{{nothing == 0}}">
           <image src="/img/img-kong@2x.png" class="nothing"></image>
           <view class="hasNoFind">暂未调查到相关信息</view>
-          <view class="writeCompanyName write-companynamem" bindtap="writeCompanyName" hover-class='t-color' wx:if="{{other}}">完善公司名称</view>
+          <view class="writeCompanyName write-companynamem" bindtap="writeCompanyName" hover-class='t-color1'  wx:if="{{other}}">完善公司名称</view>
+          <!--  -->
         </view>
       </scroll-view>
     </swiper-item>
