--- a/Weitianshi/pages/register/personInfo/personInfo.wxml
+++ b/Weitianshi/pages/register/personInfo/personInfo.wxml
@@ -14,7 +14,7 @@
       <button class="clear {{time=='1'?'clearOn':''}}" bindtap="checkCode" disabled="{{time==1}}" loading="{{checking==1}}">{{getCode}}</button>
     </view>
     <view>
-      <button form-type="submit" class="nextBtn complete-phone-binding" bindtap="nextPage" loading="{{loading=='1'}}">下一步</button>
+      <button form-type="submit" class="nextBtn complete-phone-binding" hover-class='t-other-button-hover' bindtap="nextPage" loading="{{loading=='1'}}">下一步</button>
     </view>
   </form>
 
@@ -29,8 +29,8 @@
     <input placeholder="手机号" disabled="true" value="{{telephone}}" />
   </view>
   <view>
-    <button class="nextBtn1" bindtap="goBack" loading="{{loading=='1'}}">其他手机绑定</button>
-    <button class="nextBtn1" bindtap="nextPage1" loading="{{loading=='1'}}">下一步</button>
+    <button class="nextBtn1" bindtap="goBack" hover-class='t-other-button-hover' loading="{{loading=='1'}}">其他手机绑定</button>
+    <button class="nextBtn1" hover-class='t-other-button-hover' bindtap="nextPage1" loading="{{loading=='1'}}">下一步</button>
   </view>
 
   <!--错误提示-->
