--- a/Weitianshi/app.wxss
+++ b/Weitianshi/app.wxss
@@ -6,7 +6,19 @@
 scroll-view {
   height: 100%;
 }
-
+button{
+padding: 0;
+margin: 0;
+position: static;
+border-radius: 0;
+background: white;
+}
+button::after{
+border: none;
+width: auto;
+height: auto;
+background: white;
+}
 .container {
   height: 100%;
   display: flex;
@@ -1199,4 +1211,7 @@ textarea {
 }
 .t-color{
   color: #008DE5!important;
+}
+.t-redColor{
+  background: #CC364F!important;
 }
