--- a/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxml
+++ b/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxml
@@ -8,7 +8,7 @@
             <view class='itemName'>{{item.schedule_name}}</view>
             <view class='itemNum'>{{item.node_count}}个项目</view>
           </view>
-        </block> 
+        </block>
       </view>
     </scroll-view>
   </view>
@@ -94,10 +94,10 @@
   </view>
   <view style="height:30rpx;"></view>
   <!--符合条件的我的项目  -->
-  <view wx:if="{{myProject.length !=0}}">
+  <!-- <view wx:if="{{myProject.length !=0}}">
     <block wx:for="{{myProject}}" wx:key="{{index}}">
       <view class="outBox picFather" wx:if="{{item.handle_status != 2 }}">
-        <view class="insideBox"data-id="{{item.project_id}}" bindtap="detail" hover-class='t-hoverColor'>
+        <view class="insideBox" data-id="{{item.project_id}}" bindtap="detail" hover-class='t-hoverColor'>
           <view>
             <view class="flex">
               <view class="describle" wx:if="{{item.pro_intro != ''}}">{{item.pro_intro}}</view>
@@ -127,6 +127,34 @@
         </view>
       </view>
     </block>
+  </view> -->
+  <view class='outBox'>
+    <block wx:for="{{myProject}}" wx:key="{{index}}">
+      <view class='insideBox' data-id="{{item.project_id}}" bindtap="detail">
+        <view class="describle" wx:if="{{item.pro_intro != ''}}">{{item.pro_intro}}</view>
+        <image src="/img/img-dujia@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 1}}"></image>
+        <view class='flex industryBox'>
+          <block wx:for="{{item.pro_industry}}" wx:key="{{index}}" wx:for-item='industry'>
+            <view class="allIndustry">{{industry.industry_name}}</view>
+          </block>
+        </view>
+        <view class='flex otherInfo'>
+          <view class="allProjectDetail flex " wx:if="{{item.pro_area != ''||item.pro_finance_stock_after!=0||item.pro_stage!=''||item.pro_scale!=''}}">
+            <view class="projectDetailLine" wx:if="{{item.pro_scale != ''}}">{{item.pro_scale.scale_money}} </view>
+            <view class="projectDetailLine" wx:if="{{item.pro_finance_stock_after != ''}}">· {{item.pro_finance_stock_after}}% </view>
+            <view class="projectDetailLine" wx:if="{{item.pro_stage != ''}}"> · {{item.pro_stage.stage_name}}</view>
+            <view class="projectDetailLine" wx:if="{{item.pro_area != ''}}">· {{item.pro_area.area_title}}</view>
+          </view>
+        </view>
+        <view class="star" catchtap="clickProject" data-id="{{item.project_id}}" wx:if="{{otherPerson == false}}" data-top="{{item.is_top}}">
+          <image src="/img/btn-zhiding@2x.png" class="starPic" wx:if='{{item.is_top == 0}}'></image>
+          <image src="/img/btn-quxiao@2x.png" class="starPic" wx:if='{{item.is_top == 1}}'></image>
+        </view>
+        <view class="top" data-id="{{item.project_id}}" wx:if="{{otherPerson == true}}">
+          <image src="/img/img-tuijian@2x.png" class="topPic" wx:if="{{item.is_top == 1 }}"></image>
+        </view>
+      </view>
+    </block>
   </view>
   <view class="emptyStyle" wx:if="{{myProject.length==0 && notHave != 0}}">
     <view>您的店铺是空的</view>
@@ -134,25 +162,58 @@
   </view>
 
   <view class="highBox"></view>
-  <view class="aboutNetwork flex" wx:if="{{otherPerson == false}}">
-    <view bindtap="decorate" hover-class="t-other-button-hover"  class="newProject">
-    店铺装修
+  <!-- <view class="aboutNetwork flex" wx:if="{{otherPerson == false}}">
+    <view bindtap="decorate" hover-class="t-other-button-hover" class="newProject">
+      店铺装修
     </view>
     <view class="t-line"></view>
     <view bindtap="editDetail" class="newProject" hover-class="t-other-button-hover">新增项目</view>
-  </view>
+  </view> -->
   <!--分享  -->
-  <view class="shareSth" catchtap="toShareShop">分享店铺</view>
+  <!-- <view class="shareSth">分享店铺</view> -->
+  <!--我的项目店铺的底部按钮  -->
+  <view class="flex aboutNetwork" wx:if="{{otherPerson == false}}">
+    <view class="flexBox" hover-class="t-hoverColor" catchtap="toShareShop">
+      <image src='/img/icon-erweima@2x.png' class='shopPic'></image>
+      <view class='shopBlock'>店铺二维码</view>
+    </view>
+    <view class="t-line"></view>
+    <view class="flexBox" hover-class="t-hoverColor">
+      <image src='/img/icon-fenxiang@2x.png' class='shopPic'></image>
+      <button class='shopBlock' open-type="share" id="shareFriend">分享</button>
+    </view>
+    <view class="t-line"></view>
+    <view class="flexBox" bindtap="decorate" hover-class="t-hoverColor">
+      <image src='/img/icon-dianpu@2x.png' class='shopPic'></image>
+      <view class='shopBlock'>店铺装修</view>
+    </view>
+    <view class="t-line"></view>
+    <view bindtap="editDetail" class='creatProject' hover-class="t-redColor">创建项目</view>
+  </view>
+
+  <!--他人项目店铺的底部按钮  -->
+  <view class="aboutNetwork flex" wx:if="{{otherPerson == true}}">
+    <view class="flexBox" bindtap="moreProject" hover-class="t-hoverColor">
+      <image src='/img/icon-shouye@2x.png' class='shopPic'></image>
+      <view class='shopBlock'>首页</view>
+    </view>
+    <view class='t-line'></view>
+    <view class="flexBox"  hover-class="t-hoverColor ">
+      <image src='/img/icon-fenxiang@2x.png' class='shopPic'></image>
+      <button class='shopBlock' open-type="share" id="shareFriend">分享</button>
+    </view>
+    <view class='t-line'></view>
+    <view class="flexBox" bindtap="toMyShop" hover-class="t-hoverColor">
+      <image src='/img/icon-dianpu@2x.png' class='shopPic'></image>
+      <label class='shopBlock'>我的店铺</label>
+    </view>
+    <view class='t-line'></view>
+    <view bindtap="pushProject" class='creatProject' hover-class="t-redColor">提交项目</view>
+  </view>
 
   <!--错误提示-->
   <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
-  <view class="aboutNetwork flex" wx:if="{{otherPerson == true}}">
-    <view bindtap="toMyShop"  class="myShop" hover-class="t-other-button-hover">我的店铺</view>
-    <view class='t-line'></view>
-    <view bindtap="pushProject"  class="myShop" hover-class="t-other-button-hover">推送项目</view>
-     <view class='t-line'></view>
-    <view bindtap="moreProject" class="moreProject" hover-class="t-other-button-hover">更多精选项目</view>
-  </view>
+
   <!--模态层  -->
   <view class='t-modal' wx:if='{{currentIndex!=5}}' bindtap='modal'></view>
 
