--- a/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
+++ b/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
@@ -156,24 +156,46 @@ page {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 88rpx;
-  line-height: 88rpx;
-  color: #fff;
-  font-size: 30rpx;
-  background: #40587a;
+  height: 104rpx;
+  line-height: 104rpx;
+  font-size: 20rpx;
+  color: #333;
+  background: #fff;
+}
+.t-hoverColor .button-hover{
+  background:#f2f3f4; 
+}
+.shopBlock {
+  width: 172rpx;
+  text-align: center;
+  margin-top: 32rpx;
+  line-height: 104rpx;
+  font-size: 20rpx;
+  color: #333;
+  border: none;
+  /* background: #fff; */
 }
 
-.shop {
-  margin-top: 28rpx;
-  border-right: 1rpx solid #fff;
-  padding-right: 122rpx;
-  padding-left: 122rpx;
+.creatProject {
+  font-size: 30rpx;
+  color: #fff;
+  text-align: center;
+  background: #e43d59;
+  width: 236rpx;
 }
 
 .myShop {
   width: 29%;
   text-align: center;
   background: #40587a;
+}
+
+button {
+  position: static;
+}
+
+button::after {
+  border: none;
 }
 
 .empty {
@@ -212,32 +234,32 @@ page {
 /*名片*/
 
 .outBox {
-  margin: 0 32rpx 30rpx 32rpx;
-  width: auto;
+  background: white;
+  width: 100%;
   height: auto;
-  position: relative;
 }
 
 .insideBox {
-  padding: 32rpx 32rpx 24rpx 32rpx;
-  background: #fff;
-  border-radius: 8rpx;
+  border-bottom: 1rpx solid #e6e6e6;
+  padding: 32rpx;
+  position: relative;
 }
 
 .outBox .describle {
-  font-size: 32rpx;
+  font-size: 30rpx;
   color: #333;
-  line-height: 38rpx;
+  line-height: 42rpx;
   text-align: left;
-  margin-bottom: 36rpx;
+  margin-bottom: 28rpx;
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
+  font-weight: bold;
 }
 
-.allIndustry {
+/* .allIndustry {
   font-size: 26rpx;
   color: #666;
   line-height: 26rpx;
@@ -246,12 +268,26 @@ page {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+} */
+
+.allIndustry {
+  background: #f5f5f5;
+  border-radius: 4rpx;
+  width: 128rpx;
+  height: 50rpx;
+  font-size: 24rpx;
+  color: #666;
+  line-height: 50rpx;
+  text-align: center;
+  margin-right: 16rpx;
+}
+
+.industryBox {
+  margin-bottom: 20rpx;
 }
 
 .otherInfo {
   position: relative;
-  padding-bottom: 30rpx;
-  border-bottom: 1rpx solid #e6e6e6;
 }
 
 .others_pic {
@@ -262,9 +298,11 @@ page {
 }
 
 .projectDetailLine {
-  padding: 0 16rpx;
-  border-right: 1rpx solid #999;
   color: #666;
+  font-size: 24rpx;
+  line-height: 32rpx;
+  text-align: left;
+  padding-left: 10rpx;
 }
 
 .projectDetailLine:first-child {
@@ -348,16 +386,16 @@ page {
 }
 
 .star {
-  height: 44rpx;
-  width: 44rpx;
+  height: 52rpx;
+  width: 112rpx;
   position: absolute;
   right: 26rpx;
   bottom: 30rpx;
 }
 
 .starPic {
-  height: 24rpx;
-  width: 26rpx;
+  height: 52rpx;
+  width: 112rpx;
 }
 
 .picFather {
@@ -526,16 +564,16 @@ page {
 }
 
 .topPic {
-  height: 46rpx;
-  width: 64rpx;
+  height: 64rpx;
+  width: 96rpx;
 }
 
 .top {
-  height: 46rpx;
-  width: 64rpx;
+  height: 64rpx;
+  width: 96rpx;
   position: absolute;
-  right: 26rpx;
-  bottom: 30rpx;
+  right: 16rpx;
+  bottom: 14rpx;
 }
 
 .picModal {
@@ -648,4 +686,18 @@ page {
 
 .t-modal {
   top: 175rpx;
+}
+
+.flexBox {
+  display: flex;
+  position: relative;
+  background: #fff;
+}
+
+.shopPic {
+  width: 38rpx;
+  height: 36rpx;
+  position: absolute;
+  top: 16rpx;
+  left: 64rpx;
 }
