--- a/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
+++ b/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
@@ -192,6 +192,7 @@ page {
   font-size: 20rpx;
   color: #333;
   background: #fff;
+  border-top:1rpx solid #f0f0f0;
 }
 
 .t-hoverColor .button-hover {
@@ -201,8 +202,8 @@ page {
 .shopBlock {
   width: 172rpx;
   text-align: center;
-  margin-top: 32rpx;
-  line-height: 104rpx;
+   margin-top: 64rpx; 
+   line-height: 22rpx; 
   font-size: 20rpx;
   color: #333;
   border: none;
@@ -273,7 +274,7 @@ button::after {
 }
 
 .insideBox {
-  border-bottom: 1rpx solid #e6e6e6;
+  border-bottom: 1rpx solid #f0f0f0;
   padding: 32rpx;
   position: relative;
 }
@@ -283,7 +284,7 @@ button::after {
   color: #333;
   line-height: 42rpx;
   text-align: left;
-  margin-bottom: 28rpx;
+  margin-bottom: 20rpx;
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -409,8 +410,8 @@ button::after {
 .projectDetailType {
   height: 92rpx;
   width: 92rpx;
-  right: -3rpx;
-  top: -6rpx;
+  right: 0rpx;
+  top: 0rpx;
   position: absolute;
 }
 
@@ -782,4 +783,10 @@ button::after {
   position: absolute;
   top: 16rpx;
   left: 64rpx;
+}
+.t-line {
+  width: 2rpx;
+  height: 35rpx;
+  background: #f2f2f2;
+  margin-top: 15px;
 }
