--- a/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
+++ b/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
@@ -90,6 +90,7 @@ page {
   color: #fff;
   line-height: 36rpx;
   text-align: left;
+  font-weight: bold;
 }
 
 .userInfo .userNameTitle {
@@ -138,7 +139,8 @@ page {
   margin: 32rpx;
   background: #fff;
   margin-top: 32rpx;
-  padding-top: 24rpx;
+  padding-top: 20rpx;
+  border-radius: 4rpx;
 }
 
 .shopDesBox .shopDes {
@@ -160,7 +162,7 @@ page {
   display: -webkit-box;
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
-  margin: 0rpx 24rpx 24rpx 24rpx;
+  margin: 0rpx 24rpx 20rpx 24rpx;
   /* height: 78rpx; */
 }
 
@@ -172,12 +174,15 @@ page {
   height: auto;
   margin: 0rpx 24rpx 24rpx 24rpx;
 }
-.shopPad{
+
+.shopPad {
   padding-bottom: 24rpx;
 }
-.shopPad1{
-  padding-bottom: 0
+
+.shopPad1 {
+  padding-bottom: 0;
 }
+
 .more {
   font-size: 10px;
   color: #999;
@@ -558,8 +563,9 @@ button::after {
 }
 
 .search_icon1 {
-  display: inline-block;
-  margin-left: -250rpx;
+  display: block;
+  margin-left: 30rpx;
+  margin-top: 14rpx;
 }
 
 .modal {
@@ -585,7 +591,16 @@ button::after {
 }
 
 .renzheng {
-  width: 32rpx;
+  width: 94rpx;
+  height: 32rpx;
+  margin-right: 4rpx;
+  margin-left: 8rpx;
+  margin: 17rpx 4rpx 0 8rpx;
+  z-index: 111;
+}
+
+.renzheng1 {
+  width: 76rpx;
   height: 32rpx;
   margin-right: 4rpx;
   margin-left: 8rpx;
@@ -608,22 +623,22 @@ button::after {
 }
 
 .user_pic {
-  height: 104rpx;
-  width: 104rpx;
+  height: 120rpx;
+  width: 120rpx;
   border-radius: 50%;
   position: absolute;
   left: 10rpx;
-  top: 55rpx;
+  top: 50rpx;
 }
 
 .user_text {
-  height: 104rpx;
-  width: 104rpx;
+  height: 120rpx;
+  width: 120rpx;
   border-radius: 50%;
   position: absolute;
   left: 10rpx;
-  top: 55rpx;
-  line-height: 104rpx;
+  top: 50rpx;
+  line-height: 120rpx;
 }
 
 .topPic {
@@ -710,8 +725,8 @@ button::after {
 .scrollFrame {
   width: 100%;
   overflow-x: scroll;
-  padding-bottom: 32rpx;
-  padding-top: 32rpx;
+  padding-bottom: 24rpx;
+  padding-top: 24rpx;
   background: #fff;
   /* position: sticky!important;
   position: -webkit-sticky!important;
@@ -726,19 +741,20 @@ button::after {
 
 .item {
   display: inline !important;
-  /* height: 64rpx; */
-  padding: 8rpx 12rpx;
+  /* height: 64rpx;  */
+  padding: 10.5rpx 12rpx;
   background: white;
   white-space: nowrap;
-  margin-left: 32rpx;
+  margin-left: 24rpx;
   border-radius: 8rpx;
   text-align: center;
-  border: 1rpx solid #e6e6e6;
+  border: 2rpx solid #e6e6e6;
+  color: #666;
 }
 
 .item .itemName {
   font-size: 26rpx;
-  color: #666;
+  /* color: #666; */
   /* margin-bottom: 16rpx;
   margin-top: 24rpx; */
 }
@@ -750,6 +766,7 @@ button::after {
 
 .itemhover {
   background: #f5f5f5;
+  color:#333;
 }
 
 .t-modal {
@@ -772,23 +789,27 @@ button::after {
   color: #999;
   letter-spacing: 0;
   text-align: left;
-  padding-left: 20rpx;
+  padding-left: 16rpx;
   display: inline-block;
-  line-height: 30rpx;
+  height: 64rpx;
+  /* line-height: 30rpx; */
 }
 
 .search_img {
-  width: 64rpx;
-  height: 64rpx;
+  width: 94rpx;
+  height: 94rpx;
   background: #fff;
   position: relative;
-  top: 20rpx;
+  /* top: 20rpx; */
   left: 20rpx;
 }
 
 .search_img image {
   width: 40rpx;
   height: 40rpx;
+  position: absolute;
+  top: 30rpx;
+  right: 28rpx;
 }
 
 .flexBox {
