--- a/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
+++ b/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
@@ -76,7 +76,7 @@ page {
   width: 100%;
   height: 280rpx;
   position: relative;
-  margin-top: 80rpx;
+  margin-top: 100rpx;
 }
 
 .userInfo {
@@ -96,7 +96,7 @@ page {
 .userInfo .userNameTitle {
   position: absolute;
   left: 150rpx;
-  top: 65rpx;
+  top: 60rpx;
   width: 700rpx;
 }
 
@@ -112,7 +112,7 @@ page {
 .userInfo .lineTwo {
   position: absolute;
   left: 150rpx;
-  top: 118rpx;
+  top: 115rpx;
   width: 500rpx;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -140,7 +140,7 @@ page {
   background: #fff;
   margin-top: 32rpx;
   padding-top: 20rpx;
-  border-radius: 4rpx;
+  border-radius: 8rpx;
 }
 
 .shopDesBox .shopDes {
@@ -207,7 +207,7 @@ page {
   font-size: 20rpx;
   color: #333;
   background: #fff;
-  border-top:1rpx solid #f0f0f0;
+  border-top: 1rpx solid #f0f0f0;
 }
 
 .t-hoverColor .button-hover {
@@ -217,8 +217,8 @@ page {
 .shopBlock {
   width: 172rpx;
   text-align: center;
-   margin-top: 64rpx; 
-   line-height: 22rpx; 
+  margin-top: 64rpx;
+  line-height: 22rpx;
   font-size: 20rpx;
   color: #333;
   border: none;
@@ -598,6 +598,7 @@ button::after {
   margin-left: 8rpx;
   margin: 17rpx 4rpx 0 8rpx;
   z-index: 111;
+  margin-bottom: 2rpx;
 }
 
 .renzheng1 {
@@ -607,6 +608,7 @@ button::after {
   margin-left: 8rpx;
   margin: 17rpx 4rpx 0 8rpx;
   z-index: 111;
+  margin-bottom: 2rpx;
 }
 
 .userPart1 {
@@ -629,7 +631,7 @@ button::after {
   border-radius: 50%;
   position: absolute;
   left: 10rpx;
-  top: 50rpx;
+  top: 40rpx;
 }
 
 .user_text {
@@ -638,7 +640,7 @@ button::after {
   border-radius: 50%;
   position: absolute;
   left: 10rpx;
-  top: 50rpx;
+  top: 40rpx;
   line-height: 120rpx;
 }
 
@@ -749,14 +751,13 @@ button::after {
   margin-left: 24rpx;
   border-radius: 8rpx;
   text-align: center;
-  border: 2rpx solid #e6e6e6;
+  border: 0.5rpx solid #e6e6e6;
   color: #666;
 }
 
 .item .itemName {
   font-size: 26rpx;
-  /* color: #666; */
-  /* margin-bottom: 16rpx;
+  /* color: #666; *//* margin-bottom: 16rpx;
   margin-top: 24rpx; */
 }
 
@@ -767,7 +768,7 @@ button::after {
 
 .itemhover {
   background: #f5f5f5;
-  color:#333;
+  color: #333;
 }
 
 .t-modal {
@@ -810,7 +811,7 @@ button::after {
   height: 40rpx;
   position: absolute;
   top: 30rpx;
-  right: 28rpx;
+  right: 40rpx;
 }
 
 .flexBox {
@@ -826,6 +827,7 @@ button::after {
   top: 16rpx;
   left: 64rpx;
 }
+
 .t-line {
   width: 2rpx;
   height: 35rpx;
