--- a/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
+++ b/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
@@ -207,7 +207,7 @@ page {
   font-size: 20rpx;
   color: #333;
   background: #fff;
-  border-top:1rpx solid #f0f0f0;
+  border-top: 0.5rpx solid #f0f0f0;
 }
 
 .t-hoverColor .button-hover {
@@ -217,8 +217,8 @@ page {
 .shopBlock {
   width: 172rpx;
   text-align: center;
-   margin-top: 64rpx; 
-   line-height: 22rpx; 
+  padding-top: 64rpx;
+  line-height: 22rpx;
   font-size: 20rpx;
   color: #333;
   border: none;
@@ -289,9 +289,12 @@ button::after {
 }
 
 .insideBox {
-  border-bottom: 0.5rpx solid #e6e6e6;
+  border-bottom: 0.5rpx solid #f0f0f0;
   padding: 32rpx;
   position: relative;
+}
+.insideBox:last-child{
+  border-bottom: none;
 }
 
 .outBox .describle {
@@ -755,8 +758,7 @@ button::after {
 
 .item .itemName {
   font-size: 26rpx;
-  /* color: #666; */
-  /* margin-bottom: 16rpx;
+  /* color: #666; *//* margin-bottom: 16rpx;
   margin-top: 24rpx; */
 }
 
@@ -767,7 +769,7 @@ button::after {
 
 .itemhover {
   background: #f5f5f5;
-  color:#333;
+  color: #333;
 }
 
 .t-modal {
@@ -826,6 +828,7 @@ button::after {
   top: 16rpx;
   left: 64rpx;
 }
+
 .t-line {
   width: 2rpx;
   height: 35rpx;
