--- a/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
+++ b/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
@@ -2,7 +2,6 @@
 
 page {
   height: 100%;
-  /* overflow: hidden; */
 }
 
 .weui-media-box__desc:last-child {
@@ -104,9 +103,7 @@ page {
   font-size: 28rpx;
   color: #fff;
   text-align: left;
-  white-space: nowrap;
   width: auto;
-  text-overflow: clip;
 }
 
 .userInfo .lineTwo {
@@ -120,20 +117,10 @@ page {
   white-space: nowrap;
 }
 
-.userCircle {
-  font-size: 12px;
-  color: #fff;
-  margin-left: 10rpx;
-  margin-top: 5rpx;
-}
-
 .userInfo .userCompany {
   font-size: 28rpx;
   color: #fff;
-  line-height: 24rpx;
-   margin-top: 10.5rpx; 
   margin-left: 5rpx;
-  /* text-align: left; */
 }
 
 .shopDesBox {
@@ -164,7 +151,6 @@ page {
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
   margin: 0rpx 24rpx 20rpx 24rpx;
-  /* height: 78rpx; */
 }
 
 .shopDesBox .shopContentAfer {
@@ -294,7 +280,8 @@ button::after {
   padding: 32rpx;
   position: relative;
 }
-.insideBox:last-child{
+
+.insideBox:last-child {
   border-bottom: none;
 }
 
@@ -312,31 +299,23 @@ button::after {
   font-weight: bold;
 }
 
-/* .allIndustry {
-  font-size: 26rpx;
-  color: #666;
-  line-height: 26rpx;
-  text-align: left;
-  margin-bottom: 24rpx;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-} */
-
 .allIndustry {
   background: #f5f5f5;
   border-radius: 4rpx;
-  width: 128rpx;
+  padding: 0 16rpx;
   height: 50rpx;
   font-size: 24rpx;
   color: #666;
   line-height: 50rpx;
   text-align: center;
   margin-right: 16rpx;
+  white-space: nowrap;
+  margin-bottom: 20rpx;
 }
 
 .industryBox {
-  margin-bottom: 20rpx;
+  word-break: break-all;
+  flex-wrap: wrap;
 }
 
 .otherInfo {
@@ -371,7 +350,6 @@ button::after {
   color: #666;
   line-height: 26rpx;
   text-align: left;
-  /* margin-bottom: 34rpx; */
 }
 
 .userInfo {
@@ -454,7 +432,7 @@ button::after {
   width: 112rpx;
   position: absolute;
   right: 26rpx;
-  bottom: 30rpx;
+  bottom: 24rpx;
 }
 
 .starPic {
