--- a/Weitianshi/app.wxss
+++ b/Weitianshi/app.wxss
@@ -1,6 +1,6 @@
 /* @import "weui.wxss"; */
 @import '/utils/wxss/myContactsCard.wxss';
-@import '/utils/wxss/searchModel.wxss';
+@import '/utils/wxss/filterModel.wxss';
 @import '/utils/wxss/organization.wxss';
 @import '/utils/wxss/filterTag.wxss';
 
